--- a/xss/production/android/SimpleTest/res/layout/main.xml
+++ b/xss/production/android/SimpleTest/res/layout/main.xml
@@ -12,8 +12,8 @@
                 xkp:layout_y="20px"
                 android:layout_width="140px"
                 android:layout_height="40px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </TextView>
                 <EditText android:id="@+id/edtFirstName"
@@ -21,8 +21,8 @@
                 xkp:layout_y="10px"
                 android:layout_width="150px"
                 android:layout_height="40px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </EditText>
                 <TextView android:id="@+id/lblLastName"
@@ -31,8 +31,8 @@
                 xkp:layout_y="70px"
                 android:layout_width="140px"
                 android:layout_height="40px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </TextView>
                 <EditText android:id="@+id/edtLastName"
@@ -40,8 +40,8 @@
                 xkp:layout_y="60px"
                 android:layout_width="150px"
                 android:layout_height="40px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </EditText>
                 <Button android:id="@+id/btnFullName"
@@ -50,8 +50,8 @@
                 xkp:layout_y="110px"
                 android:layout_width="200px"
                 android:layout_height="43px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </Button>
                 <TextView android:id="@+id/lblFullName"
@@ -60,8 +60,8 @@
                 xkp:layout_y="170px"
                 android:layout_width="200px"
                 android:layout_height="30px"
-                xkp:placement="XKPLayout.PL_NONE"
-                android:visible="View.VISIBLE"
+                xkp:placement="none"
+                android:visibility="visible"
             >
                 </TextView>
 			</com.xkp.android.SimpleTest.XKPLayout>
